deployment.yaml

# docker login
## kubectl create secret generic regcred  --from-file=.dockerconfigjson=/home/afcarvalho/.docker/config.json --type=kubernetes.io/dockerconfigjson

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sorter-backend

spec:
  replicas: 10
  
  selector: # is a list of labels that Pods must have in order for the Deployment to manage them
    matchLabels:
      app: sorter-api
  
  minReadySeconds: 10

  strategy: # tells Kubernetes how to perform updates to the Pods managed by the Deployment.
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  
  template:
    metadata:
      labels:
        app: sorter-api
    spec:
      containers:
        - name: sorter-api
          image: afcarvalho1991/sorter-backend:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 500Mi
              cpu: "1"
            requests:
              memory: 100Mi
              cpu: "0.25"

            # args:
            # - -cpus
            # - "2"

      imagePullSecrets:
        - name: regcred
