service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sorter-backend
  labels:
    app: sorter-api
spec:
  type: LoadBalancer
  ports:
    - port: 5001
      nodePort: 30001
      protocol: TCP
  selector:
    app: sorter-api
